<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragmentos_admin.Fragment_admin_cuenta">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_img_perfil"
            android:id="@+id/img_perfil_admin"/>

        <!--nombre-->
        <TextView
            android:id="@+id/nombres_admin"
            android:text="@string/nombres_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/img_perfil_admin"/>
        <TextView
            android:id="@+id/Txt_nombres_admin"
            android:text="@string/Txt_nombres_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/img_perfil_admin"
            android:layout_alignParentEnd="true"/>
        <!--email-->
        <TextView
            android:id="@+id/email_admin"
            android:text="@string/email_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/nombres_admin"/>
        <TextView
            android:id="@+id/Txt_email_admin"
            android:text="@string/Txt_email_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/Txt_nombres_admin"
            android:layout_alignParentEnd="true"/>
        <!--tiempo registrado-->
        <TextView
            android:id="@+id/tiempo_registro_admin"
            android:text="@string/tiempo_registro_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/email_admin"/>
        <TextView
            android:id="@+id/Txt_tiempo_registro_admin"
            android:text="@string/Txt_tiempo_registro_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/Txt_email_admin"
            android:layout_alignParentEnd="true"/>
        <!--rol-->
        <TextView
            android:id="@+id/rol_admin"
            android:text="@string/rol_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/tiempo_registro_admin"/>
        <TextView
            android:id="@+id/Txt_rol_admin"
            android:text="@string/Txt_rol_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/Txt_tiempo_registro_admin"
            android:layout_alignParentEnd="true"/>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:minHeight="48dp"
            app:cardCornerRadius="10dp"
            app:contentPadding="10dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/rol_admin">

            <TextView
                android:id="@+id/CerrarSesionAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:text="@string/CerrarSesionAdmin"
                app:drawableStartCompat="@drawable/ic_cerrar_sesion"
                app:drawableEndCompat="@drawable/ic_siguiente" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>



</ScrollView>