<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrador.DetalleLibro">
    <!--toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRLDetalle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageView
            android:id="@+id/Ib_regresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Txt_detalle_libro"
            android:text="@string/Txt_detalle_libro"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:background="#cccccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/Btn_leer_libro"
        android:padding="5dp"
        android:layout_below="@+id/toolbarRLDetalle">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--visualizador imagen-->
                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:background="#cccccc"
                    android:layout_marginEnd="5dp"
                    android:id="@+id/pdfRL">

                    <com.github.barteksc.pdfviewer.PDFView
                        android:id="@+id/VisualizadorPDF"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>


                </RelativeLayout>
                <!--titulo-->
                <TextView
                    android:id="@+id/titulo_libro_D"
                    android:text="@string/titulo_libro_D"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/pdfRL"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"/>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titulo_libro_D"
                    android:layout_toEndOf="@+id/pdfRL">
                    <!--barrio-->
                    <TableRow>

                        <TextView
                            android:text="@string/Txt_categoria_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/barrio_D"
                            android:text="@string/categoria_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>


                    </TableRow>
                    <!--fecha-->
                    <TableRow>

                        <TextView
                            android:text="@string/Txt_fecha_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/fecha_D"
                            android:text="@string/fecha_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>


                    </TableRow>
                    <!--visitas-->
                    <TableRow>

                        <TextView
                            android:text="@string/Txt_vistas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/vistas_D"
                            android:text="@string/vistas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>


                    </TableRow>
                    <TableRow>

                        <TextView
                            android:text="@string/Txt_descargas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/descargas_d"
                            android:text="@string/vistas_D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"/>


                    </TableRow>


                </TableLayout>

            </RelativeLayout>

            <TextView
                android:text="@string/Txt_descripcion_D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/descripcion_D"
                android:text="@string/descripcion_D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/Btn_leer_libro"
        android:text="@string/Btn_leer_libro"
        android:drawableTop="@drawable/ic_leer_libro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"/>
</RelativeLayout>