<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Elegir_rol">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:text="@string/txt_rol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:paddingTop="15dp"

            android:layout_marginTop="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_rol_admin"
            android:text="@string/btn_rol_administrador"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:layout_width="170dp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:paddingTop="15dp"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:layout_marginTop="10dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_rol_cliente"
            android:text="@string/btn_rol_cliente"
            android:layout_marginTop="5dp"
            android:textAllCaps="true"
            android:layout_width="170dp"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>








</RelativeLayout>