<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cliente.Registro_cliente">

    <RelativeLayout
        android:id="@+id/toolbarRLClienteR"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/Ib_regresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:padding="20dp"
            android:layout_centerVertical="true"/>


        <TextView
            android:id="@+id/Txt_registro_cliente"
            android:text="@string/Txt_registro_cliente"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <View
            android:background="#cccccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/toolbarRLClienteR"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Nombre-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">


                <EditText
                    android:id="@+id/Et_nombres_cliente"
                    android:hint="@string/Et_nombres_cliente"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <!--Edad-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">


                <EditText
                    android:id="@+id/Et_edad_cliente"
                    android:hint="@string/Et_edad_cliente"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <!--Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">


                <EditText
                    android:inputType="textEmailAddress"
                    android:id="@+id/Et_email_cliente"
                    android:hint="@string/Et_email_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <!--Contraseña-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">


                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/Et_password_cliente"
                    android:hint="@string/Et_password_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <!--Repetir Contraseña-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">


                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/Et_R_password_cliente"
                    android:hint="@string/Et_R_password_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
            <!--Boton Registro-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Btn_registrar_cliente"
                android:textAllCaps="true"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/Btn_registrar_cliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <!--Txt tengo cuenta-->
            <TextView
                android:id="@+id/Txt_tengo_cuenta"
                android:text="@string/Txt_tengo_cuenta"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
</RelativeLayout>